[gd_scene load_steps=13 format=3 uid="uid://dwh727n4f13fn"]

[ext_resource type="Script" path="res://characters/enemies/mobs/packy/mob_packy.gd" id="1_bkuty"]
[ext_resource type="Texture2D" uid="uid://b606kpyb6g8l7" path="res://characters/enemies/mobs/packy/packy.png" id="1_ebo1e"]

[sub_resource type="CircleShape2D" id="CircleShape2D_elby6"]
radius = 326.345

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ojwcr"]
size = Vector2(155, 94)

[sub_resource type="AtlasTexture" id="AtlasTexture_02b1b"]
atlas = ExtResource("1_ebo1e")
region = Rect2(1024, 0, 1024, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_ak17e"]
atlas = ExtResource("1_ebo1e")
region = Rect2(1024, 1024, 1024, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_qgvsc"]
atlas = ExtResource("1_ebo1e")
region = Rect2(0, 0, 1024, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_vfghq"]
atlas = ExtResource("1_ebo1e")
region = Rect2(0, 1024, 1024, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_g8x5a"]
atlas = ExtResource("1_ebo1e")
region = Rect2(0, 0, 1024, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_unfkg"]
atlas = ExtResource("1_ebo1e")
region = Rect2(0, 1024, 1024, 1024)

[sub_resource type="SpriteFrames" id="SpriteFrames_wd4nj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_02b1b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ak17e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_02b1b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qgvsc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vfghq")
}],
"loop": false,
"name": &"angry",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g8x5a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_unfkg")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_b87hu"]
radius = 19.0

[node name="MobPacky" type="CharacterBody2D"]
light_mask = 2
visibility_layer = 29
collision_layer = 3
collision_mask = 3
script = ExtResource("1_bkuty")

[node name="PackyDetector" type="Area2D" parent="."]
disable_mode = 2
collision_layer = 2
collision_mask = 2
metadata/_edit_lock_ = true

[node name="DetectorArea" type="CollisionShape2D" parent="PackyDetector"]
shape = SubResource("CircleShape2D_elby6")
metadata/_edit_lock_ = true

[node name="AttackArea" type="Area2D" parent="."]
disable_mode = 2
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(-78, -48)
shape = SubResource("RectangleShape2D_ojwcr")

[node name="AttackTimer" type="Timer" parent="AttackArea"]
wait_time = 0.3
one_shot = true

[node name="AttackCooldown" type="Timer" parent="AttackArea"]
one_shot = true

[node name="PackyAniSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -36)
scale = Vector2(0.07, 0.07)
sprite_frames = SubResource("SpriteFrames_wd4nj")
animation = &"angry"
frame = 4
frame_progress = 1.0

[node name="PackyCollision" type="CollisionShape2D" parent="."]
light_mask = 2
visibility_layer = 2
position = Vector2(0, -19)
shape = SubResource("CircleShape2D_b87hu")

[connection signal="body_entered" from="PackyDetector" to="." method="_on_packy_detector_body_entered"]
[connection signal="body_exited" from="PackyDetector" to="." method="_on_packy_detector_body_exited"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_attack_area_body_exited"]
